# aero-invest

./: .gitignore  HTML.txt  README.md  companies.json  config.json  extract_stock_data.py  load.py  main.py  page_snapshot.html  pyproject.toml  transform_data.py
src/: extract_flight_stats.py  extract_reports.py  extract_stock_data.py  load.py  transform.py  transform_data.py
