[project]
name = "aero-invest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "finnhub-python>=2.4.25",
    "pandas>=2.3.3",
    "selenium>=4.37.0",
    "webdriver-manager>=4.0.2",
    "yfinance>=0.2.66",
]
